nodejs blog readme

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ html-stuff/
 php-mvc-symfony/.idea/workspace.xml 
 express/*
 !important express/blog-nodejs/
+express/blog-nodejs/.idea/workspace.xml 
